[package]
name = "uf2-file"
description = "A library for working with the UF2 file format."
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/mestrode/uf2-file"

exclude = ["example.uf2"]

[[bin]]
name = "uf2-file"
required-features = ["cli"]

[dependencies]
bitflags = "2.5"
defmt = { version = "1.0.1", optional = true }
zerocopy = { version = "0.8.40", features = ["derive"] }
md5 = "0.8.0"

# CLI only
clap = { version = "4.5.4", optional = true, features = ["derive"] }
clap-num = { version = "1.1.1", optional = true }
num = { version = "0.4.1", default-features = false }
anyhow = { version = "1.0.81", optional = true }

[features]
default = ["file"]
file = []
defmt-03 = ["dep:defmt"]
cli = ["dep:clap", "dep:clap-num", "dep:anyhow"]
